--- a/ml.ipynb
+++ b/ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 313,
    "id": "95e1aa68",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "from scipy.io import arff\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 314,
    "id": "c2a86808",
    "metadata": {},
    "outputs": [],
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 315,
    "id": "415ea1d1",
    "metadata": {},
    "outputs": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 316,
    "id": "ff0b94e7",
    "metadata": {},
    "outputs": [
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 317,
    "id": "dc345375",
    "metadata": {},
    "outputs": [
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 318,
    "id": "c7d8ab52",
    "metadata": {},
    "outputs": [],
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 319,
    "id": "d55f6474",
    "metadata": {},
    "outputs": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 320,
    "id": "29866f24",
    "metadata": {},
    "outputs": [],
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 321,
    "id": "0464b8b7",
    "metadata": {},
    "outputs": [],
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 322,
    "id": "c28684fa",
    "metadata": {},
    "outputs": [
@@ -529,7 +530,7 @@
        "[523588 rows x 13 columns]"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 323,
    "id": "61964053",
    "metadata": {},
    "outputs": [
@@ -678,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 324,
    "id": "adb208e3",
    "metadata": {},
    "outputs": [
@@ -709,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 325,
    "id": "12313558",
    "metadata": {},
    "outputs": [],
@@ -732,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 326,
    "id": "39fd406b",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1159,7 @@
        "[418870 rows x 161 columns]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 327,
    "id": "2b9986af",
    "metadata": {},
    "outputs": [
@@ -1595,7 +1596,7 @@
        "[104718 rows x 161 columns]"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 328,
    "id": "0a0f2841",
    "metadata": {},
    "outputs": [
@@ -1671,6 +1672,50 @@
    "source": [
     "print(f\"Final number of classes: {y.nunique()}\")\n",
     "print(y.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91afa4f5",
+   "metadata": {},
+   "source": [
+    "# Save datasets as Parquet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "id": "b389ec2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ArrowKeyError",
+     "evalue": "A type extension with name pandas.period already defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mArrowKeyError\u001b[39m                             Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[330]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m X_train = X_train.astype({col: \u001b[33m'\u001b[39m\u001b[33mfloat64\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m X_train.select_dtypes(include=[\u001b[33m'\u001b[39m\u001b[33mFloat64\u001b[39m\u001b[33m'\u001b[39m]).columns})\n\u001b[32m      2\u001b[39m X_test = X_test.astype({col: \u001b[33m'\u001b[39m\u001b[33mfloat64\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m X_test.select_dtypes(include=[\u001b[33m'\u001b[39m\u001b[33mFloat64\u001b[39m\u001b[33m'\u001b[39m]).columns})\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mX_train\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto_parquet\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mX_train.parquet\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msnappy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m X_test.to_parquet(\u001b[33m'\u001b[39m\u001b[33mX_test.parquet\u001b[39m\u001b[33m'\u001b[39m, compression=\u001b[33m'\u001b[39m\u001b[33msnappy\u001b[39m\u001b[33m'\u001b[39m, index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      6\u001b[39m y_train.to_frame(\u001b[33m'\u001b[39m\u001b[33mPrimary_Offense_Description\u001b[39m\u001b[33m'\u001b[39m).to_parquet(\u001b[33m'\u001b[39m\u001b[33my_train.parquet\u001b[39m\u001b[33m'\u001b[39m, compression=\u001b[33m'\u001b[39m\u001b[33msnappy\u001b[39m\u001b[33m'\u001b[39m, index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pandas/util/_decorators.py:333\u001b[39m, in \u001b[36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    327\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) > num_allow_args:\n\u001b[32m    328\u001b[39m     warnings.warn(\n\u001b[32m    329\u001b[39m         msg.format(arguments=_format_argument_list(allow_args)),\n\u001b[32m    330\u001b[39m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[32m    331\u001b[39m         stacklevel=find_stack_level(),\n\u001b[32m    332\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m333\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pandas/core/frame.py:3124\u001b[39m, in \u001b[36mDataFrame.to_parquet\u001b[39m\u001b[34m(self, path, engine, compression, index, partition_cols, storage_options, **kwargs)\u001b[39m\n\u001b[32m   3043\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3044\u001b[39m \u001b[33;03mWrite a DataFrame to the binary parquet format.\u001b[39;00m\n\u001b[32m   3045\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   3120\u001b[39m \u001b[33;03m>>> content = f.read()\u001b[39;00m\n\u001b[32m   3121\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3122\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mio\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mparquet\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m to_parquet\n\u001b[32m-> \u001b[39m\u001b[32m3124\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mto_parquet\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   3125\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   3126\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3127\u001b[39m \u001b[43m    \u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3128\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3129\u001b[39m \u001b[43m    \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3130\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpartition_cols\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpartition_cols\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3131\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3132\u001b[39m \u001b[43m    \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3133\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pandas/io/parquet.py:478\u001b[39m, in \u001b[36mto_parquet\u001b[39m\u001b[34m(df, path, engine, compression, index, storage_options, partition_cols, filesystem, **kwargs)\u001b[39m\n\u001b[32m    476\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(partition_cols, \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m    477\u001b[39m     partition_cols = [partition_cols]\n\u001b[32m--> \u001b[39m\u001b[32m478\u001b[39m impl = \u001b[43mget_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    480\u001b[39m path_or_buf: FilePath | WriteBuffer[\u001b[38;5;28mbytes\u001b[39m] = io.BytesIO() \u001b[38;5;28;01mif\u001b[39;00m path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m path\n\u001b[32m    482\u001b[39m impl.write(\n\u001b[32m    483\u001b[39m     df,\n\u001b[32m    484\u001b[39m     path_or_buf,\n\u001b[32m   (...)\u001b[39m\u001b[32m    490\u001b[39m     **kwargs,\n\u001b[32m    491\u001b[39m )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pandas/io/parquet.py:64\u001b[39m, in \u001b[36mget_engine\u001b[39m\u001b[34m(engine)\u001b[39m\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m engine_class \u001b[38;5;129;01min\u001b[39;00m engine_classes:\n\u001b[32m     63\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mengine_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     65\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m     66\u001b[39m         error_msgs += \u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m - \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(err)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pandas/io/parquet.py:170\u001b[39m, in \u001b[36mPyArrowImpl.__init__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    167\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyarrow\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mparquet\u001b[39;00m\n\u001b[32m    169\u001b[39m \u001b[38;5;66;03m# import utils to register the pyarrow extension types\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m170\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01marrays\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01marrow\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mextension_types\u001b[39;00m  \u001b[38;5;66;03m# pyright: ignore[reportUnusedImport] # noqa: F401\u001b[39;00m\n\u001b[32m    172\u001b[39m \u001b[38;5;28mself\u001b[39m.api = pyarrow\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pandas/core/arrays/arrow/extension_types.py:59\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;66;03m# register the type with a dummy instance\u001b[39;00m\n\u001b[32m     58\u001b[39m _period_type = ArrowPeriodType(\u001b[33m\"\u001b[39m\u001b[33mD\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m59\u001b[39m \u001b[43mpyarrow\u001b[49m\u001b[43m.\u001b[49m\u001b[43mregister_extension_type\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_period_type\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mArrowIntervalType\u001b[39;00m(pyarrow.ExtensionType):\n\u001b[32m     63\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, subtype, closed: IntervalClosedType) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     64\u001b[39m         \u001b[38;5;66;03m# attributes need to be set first before calling\u001b[39;00m\n\u001b[32m     65\u001b[39m         \u001b[38;5;66;03m# super init (as that calls serialize)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pyarrow/types.pxi:2226\u001b[39m, in \u001b[36mpyarrow.lib.register_extension_type\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/school/machine_learning/venv/lib/python3.13/site-packages/pyarrow/error.pxi:92\u001b[39m, in \u001b[36mpyarrow.lib.check_status\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mArrowKeyError\u001b[39m: A type extension with name pandas.period already defined"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = X_train.astype({col: 'float64' for col in X_train.select_dtypes(include=['Float64']).columns})\n",
+    "X_test = X_test.astype({col: 'float64' for col in X_test.select_dtypes(include=['Float64']).columns})\n",
+    "\n",
+    "X_train.to_parquet('X_train.parquet', compression='snappy', index=False)\n",
+    "X_test.to_parquet('X_test.parquet', compression='snappy', index=False)\n",
+    "y_train.to_frame('Primary_Offense_Description').to_parquet('y_train.parquet', compression='snappy', index=False)\n",
+    "y_test.to_frame('Primary_Offense_Description').to_parquet('y_test.parquet', compression='snappy', index=False)\n"
    ]
   }
  ],
