--- a/svm.ipynb
+++ b/svm.ipynb
@@ -719,7 +719,7 @@
    "source": [
     "As predicted the accuracy increses with the number of classes being merged into the \"Other\" class. We can see that the number of classes has a negative correlation with accuracy of the model.\n",
     "\n",
-    "For the purpose of further experiments, we'll pick the threshold 200 as the optimal one with a managable number of classes while decreasing the training time significantly and having a much better accuracy copared to the models trained on datasets with a smaller rarity threshold."
+    "For the purpose of further experiments, we'll pick the threshold 2000 as the optimal one with a managable number of classes while decreasing the training time significantly and having a much better accuracy copared to the models trained on datasets with a smaller rarity threshold."
    ]
   },
   {
@@ -884,7 +884,7 @@
    "source": [
     "## 2. Experiment - find the optimal C parameter for the SVM\n",
     "\n",
-    "We're going to use the best performing RARITY_THRESHOLD of 5000 and now we'll "
+    "Having identified the optimal RARITY_THRESHOLD=2000, we now tune the C parameter to find the optimal regularization strength. The C parameter controls the trade-off between maximizing the margin and minimizing classification errors on the training set."
    ]
   },
   {
