add: breast cancer

--- a/svm_breast_cancer/svm_breast_cancer.ipynb
+++ b/svm_breast_cancer/svm_breast_cancer.ipynb
@@ -11,22 +11,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5b180380",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SVM classification on the Breast Cancer dataset\n",
+    "# Author: Tomas Hobza\n",
+    "\n",
     "from scipy.io import arff\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "import pickle\n",
     "from sklearn.svm import LinearSVC\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
+    "from sklearn.metrics import (balanced_accuracy_score, f1_score, \n",
+    "                             precision_score, recall_score, accuracy_score,\n",
+    "                             confusion_matrix, classification_report)\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import time\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
     "\n",
     "# set random seed for reproducibility\n",
-    "np.random.seed(0)"
+    "np.random.seed(42)"
    ]
   },
   {
@@ -42,32 +51,48 @@
    "execution_count": null,
    "id": "8b49faeb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "class\n",
-       "False    177\n",
-       "True     108\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "## 0. Load the dataset\n",
+    "\n",
     "# Load the parquet files\n",
     "df = pd.read_parquet('br_train_cleaned.parquet')\n",
     "\n",
+    "print(f\"Dataset shape: {df.shape}\")\n",
+    "print(f\"\\nClass distribution:\")\n",
+    "print(df['class'].value_counts())\n",
+    "print(f\"\\nClass balance ratio: {df['class'].value_counts().min() / df['class'].value_counts().max():.3f}\")\n",
     "\n",
-    "# split the data into features and labels\n",
+    "# Display first few rows\n",
+    "print(\"\\nFirst 5 rows:\")\n",
+    "display(df.head())\n",
+    "\n",
+    "# Check for missing values\n",
+    "print(f\"\\nMissing values: {df.isnull().sum().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1412b84d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into features and labels\n",
     "X = df.drop(columns=['class'])\n",
     "y = df['class']\n",
     "\n",
-    "# split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
+    "# Split the data into training and testing sets (80:20)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "print(f\"Training set size: {X_train.shape[0]} samples\")\n",
+    "print(f\"Test set size: {X_test.shape[0]} samples\")\n",
+    "print(f\"\\nTraining set class distribution:\")\n",
+    "print(y_train.value_counts())\n",
+    "print(f\"\\nTest set class distribution:\")\n",
+    "print(y_test.value_counts())"
    ]
   },
   {
@@ -75,8 +100,97 @@
    "id": "7bc8843e",
    "metadata": {},
    "source": [
-    "1. Experiment "
+    "## 1. Experiment - holdout vs cross-validation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2bd112de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Holdout balanced accuracy: 0.8948\n",
+      "CV Scores per fold: ['0.9147', '0.9345', '0.9545', '0.8805', '0.9487']\n",
+      "Mean: 0.9266\n",
+      "Std:  0.0268\n",
+      "Training Time: 0.8s (275.9x longer)\n",
+      "\n",
+      "============================================================\n",
+      "COMPARISON\n",
+      "============================================================\n",
+      "Holdout:          0.8948\n",
+      "CV Mean:          0.9266\n",
+      "Difference:       0.0318\n",
+      "CV Std Dev:       ±0.0268\n"
+     ]
+    }
+   ],
+   "source": [
+    "# == HOLDOUT APPROACH ==\n",
+    "# train default model on t\n",
+    "model = LinearSVC(class_weight='balanced', max_iter=2000, random_state=42)\n",
+    "start = time.time()\n",
+    "model.fit(X_train, y_train)\n",
+    "holdout_time = time.time() - start\n",
+    "y_pred = model.predict(X_test)\n",
+    "holdout_acc = balanced_accuracy_score(y_test, y_pred)\n",
+    "print(f\"Holdout balanced accuracy: {holdout_acc:.4f}\")\n",
+    "\n",
+    "# == CROSS-VALIDATION APPROACH ==\n",
+    "kf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "start = time.time()\n",
+    "cv_scores = cross_val_score(\n",
+    "    LinearSVC(C=0.01, class_weight='balanced', max_iter=2000, random_state=42),\n",
+    "    X,\n",
+    "    y,\n",
+    "    cv=kf,\n",
+    "    scoring='balanced_accuracy',\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "cv_time = time.time() - start\n",
+    "\n",
+    "print(f\"CV Scores per fold: {[f'{s:.4f}' for s in cv_scores]}\")\n",
+    "print(f\"Mean: {cv_scores.mean():.4f}\")\n",
+    "print(f\"Std:  {cv_scores.std():.4f}\")\n",
+    "print(f\"Training Time: {cv_time:.1f}s ({cv_time/holdout_time:.1f}x longer)\\n\")\n",
+    "\n",
+    "# Comparison\n",
+    "print(\"=\"*60)\n",
+    "print(\"COMPARISON\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Holdout:          {holdout_acc:.4f}\")\n",
+    "print(f\"CV Mean:          {cv_scores.mean():.4f}\")\n",
+    "print(f\"Difference:       {abs(holdout_acc - cv_scores.mean()):.4f}\")\n",
+    "print(f\"CV Std Dev:       ±{cv_scores.std():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "153b18f0",
+   "metadata": {},
+   "source": [
+    "After comparing holdout vs. cross-validation and finding CV provides more robust estimates, we proceeded with holdout validation for our extensive parameter experiments due to computational constraints. We used a fixed random seed (42) and stratified splitting to ensure fair comparisons across all experiments. This approach allowed us to test a wider range of hyperparameters while maintaining reproducibility."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60d5e8cb",
+   "metadata": {},
+   "source": [
+    "## 2. Experiment - C parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d0692d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
