--- a/svm_breast_cancer/svm_breast_cancer.ipynb
+++ b/svm_breast_cancer/svm_breast_cancer.ipynb
@@ -1045,6 +1045,35 @@
     "print(f\"  False Negatives: {cm[1,0]}\")\n",
     "print(f\"  True Positives:  {cm[1,1]}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb6a35e4",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "### Analysis: C Parameter Impact\n",
+    "\n",
+    "The regularization parameter C controls the trade-off between maximizing the margin and minimizing classification error. Our experiments reveal several important patterns:\n",
+    "\n",
+    "#### Performance Trends\n",
+    "- **Very low C values (0.001-0.01)**: Performance is poor (balanced accuracy ~0.858), indicating underfitting. The model is over-regularized and cannot capture important patterns in the data.\n",
+    "- **Moderate C values (0.1)**: We see a significant jump in performance (balanced accuracy: 0.881), suggesting the model begins to fit the data appropriately.\n",
+    "- **Higher C values (1.0-100)**: Performance plateaus at balanced accuracy ~0.895 and F1 score ~0.911. Further reducing regularization provides no additional benefit.\n",
+    "\n",
+    "#### Key Observations\n",
+    "1. **Optimal C**: We found **C=1.0** provides the best balanced accuracy (0.8948) while maintaining good generalization. Higher values (10, 100) show identical performance, suggesting we've reached the optimal complexity level.\n",
+    "\n",
+    "2. **Training Time**: Training time decreases dramatically as C increases (from 3.2ms at C=0.001 to ~1.0ms at C≥1.0). This is because higher C values lead to faster convergence - the optimization problem becomes less constrained.\n",
+    "\n",
+    "3. **Accuracy vs Balanced Accuracy**: Standard accuracy is consistently higher than balanced accuracy across all C values, indicating some class imbalance in the dataset. The gap narrows at optimal C values, suggesting better handling of minority class.\n",
+    "\n",
+    "4. **Plateau Effect**: The performance plateau from C=1.0 onwards suggests that the dataset's separability limits further improvement. The features provide sufficient information to achieve ~89% balanced accuracy, and reducing regularization further doesn't help.\n",
+    "\n",
+    "#### Conclusion\n",
+    "The results suggest the breast cancer dataset is well-suited for linear SVM classification. The optimal regularization (C=1.0) strikes the right balance - strong enough to capture true patterns but not so weak that it overfits to noise."
+   ]
   }
  ],
  "metadata": {
