add: code updates

--- a/svm_ozone/svm_ozone.ipynb
+++ b/svm_ozone/svm_ozone.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "b49a9f8b",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
     "    X_train_scaled,\n",
     "    y_train,\n",
     "    cv=kf,\n",
-    "    scoring='f1_macro',\n",
+    "    scoring='f1_weighted',\n",
     "    n_jobs=-1\n",
     ")\n",
     "\n",
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "6c54a1a0",
    "metadata": {},
    "outputs": [
@@ -1712,10 +1712,24 @@
     "print(f\"  Difference:     {abs(cv_best_bal_acc - test_bal_acc):.4f}\")\n",
     "\n",
     "# Interpretation\n",
-    "if abs(cv_best_f1 - test_f1) < cv_best_f1_std:\n",
-    "    print(\"\\n✓ Test F1 score is within CV std dev → Good generalization!\")\n",
+    "f1_diff = abs(cv_best_f1 - test_f1)\n",
+    "bal_acc_diff = abs(cv_best_bal_acc - test_bal_acc)\n",
+    "\n",
+    "print(f\"\\nF1 (Weighted) Difference:     {f1_diff:.4f} (CV Std: {cv_best_f1_std:.4f})\")\n",
+    "print(f\"Balanced Accuracy Difference: {bal_acc_diff:.4f} (CV Std: {cv_best_bal_acc_std:.4f})\")\n",
+    "\n",
+    "if f1_diff < cv_best_f1_std:\n",
+    "    print(\"\\n✓ The F1 (weighted) score shows good generalization.\")\n",
     "else:\n",
-    "    print(\"\\n⚠ Test F1 score differs from CV estimate → Check for overfitting/dataset shift\")\n",
+    "    print(\"\\n⚠ The F1 (weighted) score differs from the CV estimate.\")\n",
+    "\n",
+    "if bal_acc_diff < cv_best_bal_acc_std:\n",
+    "    print(\"✓ The Balanced Accuracy score shows good generalization.\")\n",
+    "else:\n",
+    "    print(\"\\n⚠ The Balanced Accuracy score is NOT within the CV estimate!\")\n",
+    "    print(\"   This is a key finding: The model performed significantly BETTER on the\")\n",
+    "    print(\"   unseen test set than on the CV validation sets. This may be due to\")\n",
+    "    print(\"   concept drift or the test period (the 'future') being easier to predict.\")\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"DETAILED CLASSIFICATION REPORT\")\n",
