--- a/svm_seattle_crime/svm_seattle_crime.ipynb
+++ b/svm_seattle_crime/svm_seattle_crime.ipynb
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9dde0426",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = preprocess_crime(df, RARITY_THRESHOLD=threshold)\n",
+    "X_train, X_test, y_train, y_test = preprocess_crime(df, RARITY_THRESHOLD=BEST_THRESHOLD)\n",
     "X_train_sample, _, y_train_sample, _ = train_test_split(\n",
     "            X_train, y_train,\n",
     "            train_size=SAMPLE_SIZE,\n",
@@ -827,16 +827,22 @@
     "y_pred_dummy2 = dummy2.predict(X_test)\n",
     "dummy2_acc = balanced_accuracy_score(y_test, y_pred_dummy2)\n",
     "\n",
+    "# find in the results the accuracy for threshold BEST_THRESHOLD\n",
+    "svm_acc = None\n",
+    "for res in results:\n",
+    "    if res['threshold'] == BEST_THRESHOLD:\n",
+    "        svm_acc = res['balanced_accuracy']\n",
+    "\n",
     "print(f\"Dummy classifier (always predict most common): {dummy_acc:.4f}\")\n",
     "print(f\"Dummy classifier (stratified): {dummy2_acc:.4f}\")\n",
-    "print(f\"Your SVM: {acc:.4f}\")\n",
-    "print(f\"Improvement over baseline: {acc - dummy_acc:.4f}\")\n",
-    "print(f\"Improvement over stratified baseline: {acc - dummy2_acc:.4f}\")"
+    "print(f\"Your SVM (Best Threshold): {svm_acc:.4f}\")\n",
+    "print(f\"Improvement over baseline: {svm_acc - dummy_acc:.4f}\")\n",
+    "print(f\"Improvement over stratified baseline: {svm_acc - dummy2_acc:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2bf19930",
    "metadata": {},
    "outputs": [
@@ -908,12 +914,6 @@
     }
    ],
    "source": [
-    "# find in the results the accuracy for threshold BEST_THRESHOLD\n",
-    "svm_acc = None\n",
-    "for res in results:\n",
-    "    if res['threshold'] == BEST_THRESHOLD:\n",
-    "        svm_acc = res['balanced_accuracy']\n",
-    "\n",
     "# plot the accuracies\n",
     "results_df = pd.DataFrame({\n",
     "    'Model': ['Dummy (most frequent)', 'Dummy (stratified)', 'SVM'],\n",
