--- a/svm_breast_cancer/svm_breast_cancer.ipynb
+++ b/svm_breast_cancer/svm_breast_cancer.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "2bd112de",
    "metadata": {},
    "outputs": [
@@ -555,18 +555,6 @@
     }
    ],
    "source": [
-    "# Split the data into training and testing sets (80:20)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
-    ")\n",
-    "\n",
-    "print(f\"Training set size: {X_train.shape[0]} samples\")\n",
-    "print(f\"Test set size: {X_test.shape[0]} samples\")\n",
-    "print(f\"\\nTraining set class distribution:\")\n",
-    "print(y_train.value_counts())\n",
-    "print(f\"\\nTest set class distribution:\")\n",
-    "print(y_test.value_counts())\n",
-    "\n",
     "# ============= FEATURE SCALING =============\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"FEATURE SCALING\")\n",
@@ -608,7 +596,7 @@
     "holdout_time = time.time() - start\n",
     "\n",
     "y_pred = model.predict(X_test_scaled)\n",
-    "holdout_f1 = f1_score(y_test, y_pred, average='weighted')\n",
+    "holdout_f1 = f1_score(y_test, y_pred, average='macro')\n",
     "holdout_bal_acc = balanced_accuracy_score(y_test, y_pred)\n",
     "\n",
     "print(f\"  Holdout F1 Score:         {holdout_f1:.4f}\")\n",
