change: remove author

--- a/svm_ozone/svm_ozone.ipynb
+++ b/svm_ozone/svm_ozone.ipynb
@@ -5,8 +5,7 @@
    "id": "261ef7af",
    "metadata": {},
    "source": [
-    "# SVM classification on the Ozone dataset\n",
-    "Author: Tomas Hobza"
+    "# SVM classification on the Ozone dataset"
    ]
   },
   {
