--- a/svm_seattle_crime/svm_seattle_crime.ipynb
+++ b/svm_seattle_crime/svm_seattle_crime.ipynb
@@ -5,8 +5,7 @@
    "id": "4f29676a",
    "metadata": {},
    "source": [
-    "# SVM classification on the Seattle Crime dataset\n",
-    "Author: Tomas Hobza"
+    "# SVM classification on the Seattle Crime dataset"
    ]
   },
   {
