--- a/svm_breast_cancer/svm_breast_cancer.ipynb
+++ b/svm_breast_cancer/svm_breast_cancer.ipynb
@@ -5,8 +5,7 @@
    "id": "4f29676a",
    "metadata": {},
    "source": [
-    "# SVM classification on the Breast Cancer\n",
-    "Author: Tomas Hobza"
+    "# SVM classification on the Breast Cancer"
    ]
   },
   {
