--- a/svm_loan/svm_loan.ipynb
+++ b/svm_loan/svm_loan.ipynb
@@ -5,8 +5,7 @@
    "id": "4f29676a",
    "metadata": {},
    "source": [
-    "# SVM classification on the Loans\n",
-    "Author: Tomas Hobza"
+    "# SVM classification on the Loans\n"
    ]
   },
   {
